# pubsub-benchmark

./: .gitignore  .gitmodules  LICENSE  README.md  common_data.py  main.py  pubsub_results.sqlite  strategy.drawio
cereal_bench/: Dockerfile  build_cereal.sh  pyproject.toml  run_cereal.sh  what.py
cereal_bench/benchmark/: pub.py  pub_bench.py  pub_sock.py  run_benchmark.py  sub.py  sub_sock.py
python_builtins/: pyproject.toml
python_builtins/python_builtins/: asyncio_bench.py  main.py  mproc_bench.py
ros2_bench/: interactive_docker.sh  start_docker.sh
ros2_bench/benchmark/ros2_ws/: pub_start.sh  rep_start.sh  sub_start.sh
ros2_bench/benchmark/ros2_ws/install/: local_setup.sh  setup.sh
ros2_bench/benchmark/ros2_ws/install/pubsub_bench/share/pubsub_bench/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_bench/benchmark/ros2_ws/log/: latest_build
ros2_bench/benchmark/ros2_ws/src/pubsub_bench/: package.xml  setup.cfg  setup.py
ros2_bench/benchmark/ros2_ws/src/pubsub_bench/pubsub_bench/: pub.py  rep.py  sub.py
