[tool.poetry]
name = "cereal-bench"
version = "0.1.0"
description = ""
authors = ["tensorturtle <tensorturtle@gmail.com>"]
readme = "README.md"
packages = [{include = "cereal_bench"}]

[tool.poetry.dependencies]
python = "3.8.10"
numpy = "^1.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
